# testrepo

./: .env.example  Makefile  README.md  css  hello.py  hello_world.py  html  index.html  javascript  module_name.py  pyproject.toml  requirements.txt  sudoku.css  test_agent.py
app/: __init__.py  main.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  config.py
app/models/: schemas.py
path/to/: file.py  test_file.py
public/: index.html
public/styles/: sudoku.css
tests/: test_hello.py  test_hello_world.py  test_main.py
