[tool.black]
line-length = 100
target-version = ["py311"]
exclude = "/(\.venv|build|dist|.mypy_cache|.ruff_cache)/"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "C90"]
ignore = ["E501"]
exclude = [".venv", "build", "dist", ".mypy_cache", ".ruff_cache"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
strict_optional = true
show_error_codes = true
exclude = "(.venv|build|dist|tests/.*\\.py)"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"